# RustTutorialWork

./: .gitignore  readme.md
Guessing_Game/: Cargo.toml
Guessing_Game/src/: main.rs
Traits_Implementation/: Cargo.toml
Traits_Implementation/src/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_tests.rs
blogsite/: Cargo.toml
blogsite/src/: lib.rs
boxes/: Cargo.toml
boxes/src/: main.rs
branches/: Cargo.toml
branches/src/: main.rs
calculations/: Cargo.toml
calculations/src/: main.rs
channels/: Cargo.toml
channels/src/: main.rs
deferences/: Cargo.toml
deferences/src/: main.rs
documentation_examples/: Cargo.toml
documentation_examples/src/: lib.rs
drop/: Cargo.toml
drop/src/: main.rs
duplicationreduction/: Cargo.toml
encapsulation/: Cargo.toml
enumtest/: Cargo.toml
functions/: Cargo.toml
generic_lifetimes/: Cargo.toml
hashmapping/: Cargo.toml
hello_cargo/: Cargo.toml
iterators/: Cargo.toml
lifetimes/: Cargo.toml
lifetimes_structs/: Cargo.toml
messenger/: Cargo.toml
minigrep/: Cargo.toml
ownership/: Cargo.toml
panicdemo/: Cargo.toml
playingwithstrings/: Cargo.toml
recoverableerrors/: Cargo.toml
rectangles/: Cargo.toml
refcellcons/: Cargo.toml
referencecycle/: Cargo.toml
references/: Cargo.toml
release_profiles/: Cargo.toml
reorganising_pub_crate/: Cargo.toml
restaurant/: Cargo.toml
sharedconcurrency/: Cargo.toml
slice/: Cargo.toml
structdemo/: Cargo.toml
threading/: Cargo.toml
traitobject/: Cargo.toml
variables/: Cargo.toml
vectors/: Cargo.toml
(+38 files in other folders)
